feat(dev): provide Java 25 setup
Detect a compatible development kit before resolving the dev server, offer package-manager installation during interactive use, and keep agent transports noninteractive. Propagate the selected Java installation to builds, detached processes, and the dev server.